// Copyright Materialize, Inc. and contributors. All rights reserved.
//
// Use of this software is governed by the Business Source License
// included in the LICENSE file.
//
// As of the Change Date specified in that file, in accordance with
// the Business Source License, use of this software will be governed
// by the Apache License, Version 2.0.

syntax = "proto3";

import "repr/src/role_id.proto";

package mz_repr.adt.mz_acl_item;

message ProtoAclMode {
  uint64 acl_mode = 1;
}

message ProtoMzAclItem {
    mz_repr.role_id.ProtoRoleId grantee = 1;
    mz_repr.role_id.ProtoRoleId grantor = 2;
    ProtoAclMode acl_mode = 3;
}
